fix(Sidenav): prevent text wrapping when collapsing

--- a/src/Sidenav/styles/index.less
+++ b/src/Sidenav/styles/index.less
@@ -378,6 +378,7 @@
     .rs-dropdown .rs-dropdown-toggle,
     .rs-dropdown-item,
     .rs-dropdown-item-submenu > .rs-dropdown-menu-toggle {
+      white-space: nowrap;
       text-overflow: clip;
     }
   }
